# ElectricFields

./: CMakeLists.txt
src/: main.cpp
src/client/: simulation.cpp  simulation.h
src/client/entity/: particle.cpp  particle.h  simulationobject.cpp  simulationobject.h
src/client/math/: constants.h  vec2d.cpp  vec2d.h
